Elastic deserialisation issue fixed by adding constructors to User POJO